@@ -74,7 +74,19 @@ The Initial Developer of the Covered Software is
     <surefire.max-memory>1g</surefire.max-memory>
     <surefire.additional-jvm-args/>
     <surefire.additional-jvm-module-args/>
-    <surefire.argLine>-server -Xms${surefire.min-memory} -Xmx${surefire.max-memory} ${surefire.additional-jvm-module-args} ${surefire.additional-jvm-args} -Dtc.base-dir=${tc.base-dir} ${tc.config} -Dtc.dso.globalmode=${tc.dso.globalmode} -Dtc.tests.info.property-files=${tc.tests.info.property-files} -Dcom.tc.properties=${tc.system.tests.properties} -Dcom.sun.management.jmxremote ${ee.license}</surefire.argLine>
+    <surefire.argLine>-server
+      -Xms${surefire.min-memory}
+      -Xmx${surefire.max-memory}
+      ${surefire.additional-jvm-module-args}
+      ${surefire.additional-jvm-args}
+      -Dtc.base-dir=${tc.base-dir} ${tc.config}
+      -Dtc.dso.globalmode=${tc.dso.globalmode}
+      -Dtc.tests.info.property-files=${tc.tests.info.property-files}
+      -Dcom.tc.properties=${tc.system.tests.properties}
+      -Dcom.sun.management.jmxremote
+      ${ee.license}
+      -Djdk.attach.allowAttachSelf
+    </surefire.argLine>
 
     <!--
         Unfortunately, this silly localMavenRepository property is necessary
@@ -82,6 +94,7 @@ The Initial Developer of the Covered Software is
         C:\DOCUME~1\${user.name}\.m2\repository to avoid spaces in the path
         (see the container-tests-windows profile definition).
     -->
+    <skipTests>true</skipTests> <!-- turned on if -Psystem-tests is passed -->
     <localMavenRepository>${user.home}/.m2/repository</localMavenRepository>
     <os-classifier>linux</os-classifier>
   </properties>
@@ -351,6 +364,74 @@ The Initial Developer of the Covered Software is
   </build>
 
   <profiles>
+    <profile>
+      <id>system-tests</id>
+      <properties>
+        <skipTests>false</skipTests>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.terracotta</groupId>
+            <artifactId>maven-forge-plugin</artifactId>
+            <configuration>
+              <forkCount>1</forkCount>
+              <reuseForks>false</reuseForks>
+              <printSummary>true</printSummary>
+              <forkedProcessTimeoutInSeconds>${absolute-test-timeout-secs}</forkedProcessTimeoutInSeconds>
+              <useSystemClassLoader>true</useSystemClassLoader>
+              <useManifestOnlyJar>true</useManifestOnlyJar>
+              <trimStackTrace>false</trimStackTrace>
+              <workingDirectory>${project.build.directory}</workingDirectory>
+              <argLine>${surefire.argLine}</argLine>
+              <includes>
+                <include>**/*Test.java</include>
+                <include>**/*IT.java</include>
+              </includes>
+              <excludes>
+                <exclude>**/Abstract*.java</exclude>
+                <exclude>**/*TestSetup.java</exclude>
+                <exclude>**/*TestBase.java</exclude>
+                <exclude>**/TCTestCase.java</exclude>
+                <exclude>**/*$*</exclude>
+              </excludes>
+              <properties>
+                <property>
+                  <name>listener</name>
+                  <value>net.sf.ehcache.SystemExitListener</value>
+                </property>
+              </properties>
+            </configuration>
+            <executions>
+              <execution>
+                <id>default-test</id>
+                <phase>none</phase>
+              </execution>
+              <execution>
+                <id>default-integration-test</id>
+                <goals>
+                  <goal>integration-test</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>default-verify</id>
+                <goals>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>setl2classpath</id>
+                <phase>generate-test-resources</phase>
+                <goals>
+                  <goal>setl2classpath</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
     <profile>
       <id>workaround-windows</id>
       <activation>
